# MMseqs2

./: CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
.github/workflows/: Dockerfile.GPU-debian-slim-rocm7  Dockerfile.GPU-manylinux_2_28-rocm7  build-rocm-binary.yml  docker.yml  mac-arm64.yml  test-gpu-rocm.yml
lib/libmarv/: Makefile
lib/libmarv/src/: convert.cuh  cudasw4.cuh  dbbatching.cuh  gapless_kernel_config.cuh  kernels.cuh  marv.cu  pssm.cuh  pssmkernels_gapless.cuh  pssmkernels_gapless_instantiation_dpx.cu  util.cuh
lib/libmarv/src/hpc_helpers/: cuda_helpers.cuh  peer_access.cuh  simple_allocation.cuh
lib/zstd/contrib/docker/: Dockerfile
src/: CMakeLists.txt  MMseqsBase.cpp  blosum.hpp  cuda_hip_compatibility.cuh  cuda_hip_rename.h  kernelhelpers.cuh  mathops.cuh  pssmkernels_gapless_instantiation_dpx_kernelparamzero.cu  pssmkernels_gapless_instantiation_half2.cu  pssmkernels_gapless_instantiation_half2_kernelparamzero.cu  pssmkernels_smithwaterman.cuh  pssmkernels_smithwaterman_instantiation_dpx.cu  pssmkernels_smithwaterman_instantiation_float.cu  smithwaterman_kernel_config.cuh
src/alignment/: Align2clust copy.cpp  Align2clust.cpp  Alignment.cpp  Alignment.h  CompressedA3M.cpp  CompressedA3M.h  Fwbw.cpp  Matcher.cpp  Matcher.h  rescorediagonal.cpp
src/clustering/: AlignmentSymmetry.cpp  AlignmentSymmetry.h  Clustering.cpp  Clustering.h  ClusteringAlgorithms.cpp  ClusteringAlgorithms.h
src/commons/: DBConcat.cpp  DBConcat.h  DBReader.cpp  DBReader.h  DBWriter.cpp  DBWriter.h  GpuUtil.cpp  IndexReader.h  IndexTypes.h  Orf.cpp  Orf.h  Parameters.cpp  Parameters.h  Sequence.cpp  Sequence.h  SequenceWeights.cpp  SequenceWeights.h  Util.cpp  Util.h
src/hpc_helpers/: cuda_raiiwrappers.cuh  nvtx_markers.cuh  timers.cuh
src/linclust/: KmerIndex.h  LinsearchIndexReader.cpp  LinsearchIndexReader.h  kmerindexdb.cpp  kmermatcher.cpp  kmermatcher.h  kmersearch.cpp  kmersearch.h
src/multihit/: Aggregation.cpp  Aggregation.h  besthitperset.cpp  combinepvalperset.cpp  resultsbyset.cpp
src/prefiltering/: CacheFriendlyOperations.cpp  CacheFriendlyOperations.h  IndexBuilder.cpp  IndexBuilder.h  IndexTable.h  Main.cpp  Prefiltering.cpp  Prefiltering.h  PrefilteringIndexReader.cpp  PrefilteringIndexReader.h  QueryMatcher.cpp  QueryMatcher.h  QueryMatcherTaxonomyHook.h  UngappedAlignment.cpp  UngappedAlignment.h  ungappedprefilter.cpp
src/taxonomy/: MappingReader.h  addtaxonomy.cpp  aggregatetax.cpp  filtertaxdb.cpp  filtertaxseqdb.cpp  lca.cpp  taxonomyreport.cpp
src/test/: TestBestAlphabet.cpp  TestDBReader.cpp  TestDBReaderIndexSerialization.cpp  TestDBReaderZstd.cpp  dataLinear  dataLinear.index
src/util/: alignall.cpp  alignbykmer.cpp  appenddbtoindex.cpp  apply.cpp  clusthash.cpp  compress.cpp  convert2fasta.cpp  convertalignments.cpp  convertca3m.cpp  convertkb.cpp  convertprofiledb.cpp  cpmvrmlndb.cpp  createclusterdb.cpp  createdb.cpp  createseqfiledb.cpp  createsubdb.cpp  createtsv.cpp  db2tar.cpp  diffseqdbs.cpp  expandaln.cpp  extractalignedregion.cpp  extractdomains.cpp  extractframes.cpp  extractorfs.cpp  filterdb.cpp  gff2db.cpp  gpuserver.cpp  indexdb.cpp  makepaddedseqdb.cpp  maskbygff.cpp  masksequence.cpp  mergeclusters.cpp  mergedbs.cpp  mergeresultsbyset.cpp  msa2profile.cpp  msa2result.cpp  nrtotaxmapping.cpp  offsetalignment.cpp  orftocontig.cpp  pairaln.cpp  (+36 more)
src/version/: CMakeLists.txt  Version.cpp
src/workflow/: Linsearch.cpp  Search.cpp  Taxonomy.cpp
util/: compare_mmseqs_linclust.py
